# ltfs

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile.am  NOTICES  README.md  autogen.sh  build.sh  configure.ac  ltfs.pc.in  replace_copyright.pl  validate_error_messages.py
.cmake/: FindFUSE.cmake  FindNetSNMP.cmake  FindSNMP.cmake  FindUUID.cmake  LTFSUtils.cmake
.devcontainer/rocky9/: Dockerfile  devcontainer.json
.devcontainer/ubuntu2404/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: hba_report.md
.github/workflows/: build-centos.yml  build-centos7.yml  build-centos8.yml  build-debian10.yml  build-debian11.yml  build-debian12.yml  build-debian9.yml  build-fedora28.yml  build-ubuntu-bionic.yml  build-ubuntu-eoan.yml  build-ubuntu-focal.yml  build-ubuntu-xeneal.yml  bump-version-from-tag.yml  codeql-analysis.yml  icu-config  update-uthash.yml  update-version.yml  version-bump-prelim.yml
conf/: .gitignore  CMakeLists.txt  Makefile.am  ltfs.conf.in  ltfs.conf.linux  ltfs.conf.local
contrib/fssim/: README.md
contrib/fssim/docs/: README.md  README.txt
contrib/fssim/src/: fscommon.py  fsglobals.py  fsidxupd  fsruntest  fssim
contrib/fssim/testcases/: daptest.txt  daptest2.txt  daptest3.txt  daptest4.txt  (+17 more)
contrib/ut-incindex/: README.md  ut-basic.sh  utils.sh
doc/: CODING_STYLE  CODING_STYLE.md  filedebug_tc_conf.xml  ltfs-log.conf
docs/: CODE_OF_CONDUCT.md  INSTALL  README  README.md  com.ibm.ltfs  ltfs-log.conf  ltfs.conf.example  ltfs.conf.local.example  ltfs.service  ltfslog
init.d/: Makefile.am  ltfs
man/: CMakeLists.txt  Makefile.am  README.md  ltfs-sde.8  ltfs.8  ltfs_ordered_copy.1  ltfsck.8  ltfsindextool.8  mkltfs.8
man/sgml/: ltfs-sde.sgml  ltfs.sgml  ltfs_ordered_copy.sgml  ltfsck.sgml  ltfsindextool.sgml  mkltfs.sgml
messages/: CMakeLists.txt  Makefile.am  README  make_message_src.sh  print_error_messages.py
messages/bin_ltfs/: en.txt  root.txt
messages/bin_ltfsck/: root.txt
messages/bin_ltfsindextool/: root.txt
messages/bin_mkltfs/: root.txt
messages/driver_ltotape/: en.txt  en_US.txt  root.txt
messages/internal_error/: en_US.txt  root.txt
messages/iosched_fcfs/: root.txt
messages/iosched_unified/: root.txt
messages/kmi_flatfile/: root.txt
messages/kmi_simple/: root.txt
messages/libltfs/: en_US.txt  root.txt
messages/tape_common/: en.txt  en_US.txt  root.txt
messages/tape_freebsd_cam/: en.txt  en_US.txt  root.txt
messages/tape_freebsd_camtape/: root.txt
messages/tape_generic_file/: root.txt
messages/tape_generic_itdtimg/: root.txt
messages/tape_iokit/: root.txt
messages/tape_iokit_ibmtape/: root.txt
messages/tape_linux_lin_tape/: root.txt
messages/tape_linux_sg/: root.txt
messages/tape_linux_sg_ibmtape/: en.txt  root.txt
src/: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  commons.h  compatibility.h  ltfs_copyright.h  ltfs_fuse.c  ltfs_fuse.h  ltfsmsg.h  ltfsprintf.h  main.c
src/crossbuild/: commons.h  compatibility.h
src/iosched/: CMakeLists.txt  Makefile.am  cache_manager.c  cache_manager.h  fcfs.c  unified.c
src/kmi/: CMakeLists.txt  Makefile.am  flatfile.c  key_format_ltfs.c  key_format_ltfs.h  simple.c
src/libltfs/: CMakeLists.txt  LTFS-MIB.txt  LtfsSnmpTrapDef.txt  Makefile.am  base64.c  base64.h  config_file.c  config_file.h  dcache.c  dcache.h  dcache_ops.h  fs.c  fs.h  inc_journal.c  inc_journal.h  index_criteria.c  index_criteria.h  iosched.c  iosched.h  iosched_ops.h  kmi.c  kmi.h  kmi_ops.h  label.c  label.h  ltfs.c  ltfs.h  ltfs_endian.h  ltfs_error.h  ltfs_fsops.c  ltfs_fsops.h  ltfs_fsops_raw.c  ltfs_fsops_raw.h  ltfs_fuse_version.h  ltfs_internal.c  ltfs_internal.h  ltfs_locking.h  ltfs_locking_new.h  ltfs_locking_old.h  ltfs_thread.c  (+29 more)
src/libltfs/arch/: arch_info.c  arch_info.h  errormap.c  errormap.h  filename_handling.c  filename_handling.h  ltfs_arch_ops.h  signal_internal.h  time_internal.c  time_internal.h  uuid_internal.c  uuid_internal.h  version.h
src/libltfs/arch/freebsd/: errno.h  freebsd_locking.h  freebsd_locking_old.h  xattr.h
src/libltfs/arch/osx/: osx_string.c  osx_string.h
src/tape_drivers/: CMakeLists.txt  crc32c_crc.c  crc32c_crc.h  hp_tape.c  hp_tape.h  ibm_tape.c  ibm_tape.h  open_factor.c  open_factor.h  quantum_tape.c  quantum_tape.h  reed_solomon_crc.c  reed_solomon_crc.h  spc_op_codes.h  ssc_op_codes.h  tape_drivers.h  vendor_compat.c  vendor_compat.h
src/tape_drivers/freebsd/cam/: .gitignore  CMakeLists.txt  IBM_tape.h  Makefile.am  cam_cmn.c  cam_cmn.h  cam_tc.c  camtape_cmn.c  camtape_cmn.h  camtape_tc.c
src/tape_drivers/generic/file/: CMakeLists.txt  Makefile.am  filedebug_conf_tc.c  filedebug_conf_tc.h  filedebug_tc.c
src/tape_drivers/generic/itdtimg/: CMakeLists.txt  Makefile.am  itdtimg_tc.c
src/tape_drivers/linux/lin_tape/: CMakeLists.txt  IBM_tape.h  Makefile.am  lin_tape_ibmtape.c
src/tape_drivers/linux/sg/: .gitignore  CMakeLists.txt  Makefile.am  quantum_tape.c  sg_scsi_tape.c  sg_scsi_tape.h  sg_tape.c  sg_tape.h
src/tape_drivers/linux/sg-ibmtape/: Makefile.am  sg_ibmtape.c  sg_ibmtape.h  sg_scsi_tape.c  sg_scsi_tape.h
src/tape_drivers/netbsd/: .gitignore
src/tape_drivers/netbsd/ltotape/: Makefile.am  ltotape.c  ltotape.h  ltotape_compat.h  ltotape_diag.c  ltotape_diag.h  ltotape_platform.c  ltotape_supdevs.h  ltotape_timeout.h
src/tape_drivers/netbsd/scsipi-ibmtape/: .gitignore  CMakeLists.txt  Makefile.am  ibm_tape.c  scsipi_ibmtape.c  scsipi_ibmtape.h  scsipi_scsi_tape.c  scsipi_scsi_tape.h
src/tape_drivers/osx/iokit/: CMakeLists.txt  Makefile.am  iokit.c  iokit.h  iokit_scsi.c  iokit_scsi.h  iokit_service.c  iokit_service.h  iokit_tape.c  iokit_tape.h
src/tape_drivers/osx/iokit-ibmtape/: Makefile.am  iokit_ibmtape.c  iokit_ibmtape.h  iokit_scsi.c  iokit_scsi.h  iokit_service.c  iokit_service.h
src/utils/: .gitignore  CMakeLists.txt  Makefile.am  ltfs_ordered_copy  ltfsck.c  ltfsindextool  ltfsindextool.c  ltfsoacp  mkltfs.c
